[gd_scene load_steps=3 format=2]

[ext_resource path="res://Scripts/Autoclickers.gd" type="Script" id=1]
[ext_resource path="res://Sprites/autoclicker_bg.png" type="Texture" id=2]

[node name="Autoclickers" type="Control"]
margin_right = 190.0
margin_bottom = 70.0
script = ExtResource( 1 )

[node name="AutoClickerButton" type="Button" parent="."]
margin_right = 84.0
margin_bottom = 22.0
text = "Gain AutoCharge"

[node name="ClickerAmount" type="Label" parent="."]
margin_left = 120.0
margin_top = 4.0
margin_right = 128.0
margin_bottom = 18.0
text = "0"
align = 2
valign = 1

[node name="Price" type="Label" parent="."]
margin_left = 10.0
margin_top = 30.0
margin_right = 58.0
margin_bottom = 44.0
custom_colors/font_color = Color( 0.152941, 0.670588, 0.552941, 1 )
text = "Price: 5"

[node name="SPPSLabel" type="Label" parent="."]
margin_left = 10.0
margin_top = 50.0
margin_right = 53.0
margin_bottom = 64.0
custom_colors/font_color = Color( 0.833431, 0.0902531, 0.855733, 1 )
text = "SP per Second: "

[node name="SPPSValue" type="Label" parent="."]
margin_left = 144.0
margin_top = 50.0
margin_right = 184.0
margin_bottom = 64.0
custom_colors/font_color = Color( 0.835294, 0.0901961, 0.854902, 1 )
text = "0"

[node name="Timer" type="Timer" parent="."]
autostart = true

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 95, 35 )
scale = Vector2( 0.374753, 0.250896 )
z_index = -1
texture = ExtResource( 2 )
[connection signal="pressed" from="AutoClickerButton" to="." method="_on_AutoClickerButton_pressed"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
